--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --no-minify --public-url ./",
+    "build": "parcel build index.html  --out-dir ./public --no-minify --public-url ./",
     "deploy": "vercel --prod"
   },
   "devDependencies": {
